--- a/app/views/artifacts/edit.html.erb
+++ b/app/views/artifacts/edit.html.erb
@@ -1,6 +1,6 @@
 <h1>Edit Artifact</h1>
 
-<%= form_for @artifact do |f| %>
+<%= form_for @artifact, html: { multipart: true } do |f| %>
   <p>
     <%= f.label :title %><br/>
     <%= f.text_field :title %>
@@ -28,6 +28,10 @@
   <p>
     <%= f.label :location %><br/>
     <%= f.text_field :location %>
+  </p>
+  <p>
+    <%= f.label :image %><br/>
+    <%= f.file_field :image %>
   </p>
   <p>
     <%= f.submit %>
