--- a/app/views/artifacts/index.html.erb
+++ b/app/views/artifacts/index.html.erb
@@ -1,11 +1,7 @@
-<h1>Artifacts</h1>
-
-<ul>
-  <%- @artifacts.each do |artifact| %>
-    <li>
-      <p>Title: <%= artifact.title %></p>
-      <p>Brief Description: <%= artifact.description %></p>
-      <p><%= link_to 'Read more...', artifact %></p>
-    </li>
-  <% end %>
-</ul>
+<%- @artifacts.each do |artifact| %>
+  <div class="artifacts">
+    <%= link_to image_tag(artifact.image_url.to_s), artifact %>
+    <br/>
+    <strong><%= artifact.title %> by <%= artifact.artist %>
+  </div>
+<% end %>
