--- a/app/views/artifacts/show.html.erb
+++ b/app/views/artifacts/show.html.erb
@@ -1,31 +1,27 @@
-<h1>Artifact</h1>
+<h1><%= @artifact.title %></h1>
+<h2>Artist: <%= @artifact.artist %></h2>
 
-<ul>
-  <li>
-    Title: <%= @artifact.title %>
-  </li>
-  <li>
-    Description: <%= @artifact.description %><br/>
-  </li>
-  <li>
-    Artist: <%= @artifact.artist %><br/>
-  </li>
-  <li>
-    Date: <%= @artifact.date %><br/>
-  </li>
-  <li>
-    History: <%= @artifact.history %><br/>
-  </li>
-  <li>
-    References: <%= @artifact.references %><br/>
-  </li>
-  <li>
-    Location: <%= @artifact.location %><br/>
-  </li>
-  <li>
-    Image:<br/>
-    <%= image_tag @artifact.image_url.to_s %>
-  </li>
-</ul>
+<div class="artifact">
+  <%= image_tag @artifact.image_url.to_s %>
+</div>
 
-<%= link_to 'Edit', edit_artifact_path(@artifact) %>
+<div class="left">
+  <dl class="dl-horizontal">
+    <dt>Description</dt>
+    <dd><%= @artifact.description %></dd>
+    <dt>Date</dt>
+    <dd><%= @artifact.date %></dd>
+    <dt>Location</dt>
+    <dd><%= @artifact.location %></dd>
+    <dt>History</dt>
+    <dd><%= @artifact.history %></dd>
+    <dt>References</dt>
+    <dd><%= @artifact.references %></dd>
+  </dl>
+
+  <dl class="dl-horizontal">
+    <dt>
+      <%= link_to 'Edit', edit_artifact_path(@artifact), class: 'btn btn-primary' %>
+    </dt>
+  </dl>
+</div>
