--- a/app/views/artifacts/index.html.erb
+++ b/app/views/artifacts/index.html.erb
@@ -2,6 +2,6 @@
   <div class="artifacts">
     <%= link_to image_tag(artifact.image_url.to_s), artifact %>
     <br/>
-    <strong><%= artifact.title %> by <%= artifact.artist %>
+    <strong><%= artifact.title %> by <%= artifact.artist %></strong>
   </div>
 <% end %>
