--- a/app/views/artifacts/show.html.erb
+++ b/app/views/artifacts/show.html.erb
@@ -1,5 +1,5 @@
 <div class="artifact">
-  <%= image_tag @artifact.image_url.to_s %>
+  <%= link_to image_tag(@artifact.image_url), @artifact.image.url %>
   <h1><%= @artifact.title %></h1>
   <h2>Artist: <%= @artifact.artist %></h2>
 </div>
