--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
   <div class="navbar navbar-fixed-top">
     <div class="navbar-inner">
       <div class="container">
-        <%= link_to 'Baltimore Public Works', :root, class: 'brand' %>
+        <%= link_to 'Baltimore City Public Art and Monuments', :root, class: 'brand' %>
         <div class="nav-collapse">
           <ul class="nav">
             <li><%= link_to "Add to the Collection", new_artifact_path %></li>
