Change artifacts date to string field and update form styling

--- a/app/views/artifacts/new.html.erb
+++ b/app/views/artifacts/new.html.erb
@@ -13,7 +13,7 @@
       <dd><%= f.text_field :artist %></dd>
 
       <dt><%= f.label :date %></dt>
-      <dd><%= f.date_select :date %></dd>
+      <dd><%= f.text_field :date %></dd>
 
       <dt><%= f.label :location %></dt>
       <dd><%= f.text_field :location %></dd>
