--- a/app/views/artifacts/edit.html.erb
+++ b/app/views/artifacts/edit.html.erb
@@ -17,16 +17,16 @@
       <dd><%= f.text_field :artist %></dd>
 
       <dt><%= f.label :date %></dt>
-      <dd><%= f.date_select :date %></dd>
+      <dd><%= f.text_field :date %></dd>
 
       <dt><%= f.label :location %></dt>
       <dd><%= f.text_field :location %></dd>
 
       <dt><%= f.label :history %></dt>
-      <dd><%= f.text_area :history, rows: 5, class: 'long-text-area' %></dd>
+      <dd><%= f.text_area :history %></dd>
 
       <dt><%= f.label :references %></dt>
-      <dd><%= f.text_area :references, rows: 5, class: 'long-text-area' %></dd>
+      <dd><%= f.text_area :references %></dd>
 
       <dt><%= f.label :image %></dt>
       <dd><%= f.file_field :image %></dd>
