Let users search artifacts
  * Use pg_search to conduct search on artifact fields

--- a/app/views/artifacts/index.html.erb
+++ b/app/views/artifacts/index.html.erb
@@ -1,7 +1,11 @@
-<%- @artifacts.each do |artifact| %>
-  <div class="artifacts">
-    <%= link_to image_tag(artifact.image_url.to_s), artifact %>
-    <br/>
-    <strong><%= artifact.title %> by <%= artifact.artist %></strong>
-  </div>
+<% if @artifacts.present? %>
+  <% @artifacts.each do |artifact| %>
+    <div class="artifacts">
+      <%= link_to image_tag(artifact.image_url.to_s), artifact %>
+      <br/>
+      <strong><%= artifact.title %> by <%= artifact.artist %></strong>
+    </div>
+  <% end %>
+<% else %>
+  <h1>No artifacts found.</h1>
 <% end %>
