--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,11 +10,17 @@
 
   <div class="navbar navbar-fixed-top">
     <div class="navbar-inner">
-      <div class="container">
+      <div class="container navbar-container">
         <%= link_to 'Baltimore City Public Art and Monuments', :root, class: 'brand' %>
         <div class="nav-collapse">
           <ul class="nav">
             <li><%= link_to "Add to the Collection", new_artifact_path %></li>
+            <li>
+              <%= form_tag artifact_searches_path, class: 'nav-search' do %>
+                <%= text_field_tag :search, nil, class: 'search-query' %>
+                <%= submit_tag 'Search', class: 'btn' %>
+              <% end %>
+            </li>
           </ul>
         </div>
       </div>
