--- a/app/assets/stylesheets/bootstrap_and_overrides.css
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css
@@ -7,8 +7,12 @@
   */
 
 body {
-  padding-top: 60px;
+  padding-top: 85px;
   padding-bottom: 60px;
+}
+
+div.navbar-container {
+  padding-top: 15px;
 }
 
 div.artifacts {
@@ -30,4 +34,8 @@ div.artifact {
 textarea {
   width: 500px;
   height: 100px;
+}
+
+form.nav-search {
+  padding-left: 100px;
 }
