--- a/app/assets/stylesheets/bootstrap_and_overrides.css
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css
@@ -16,9 +16,8 @@ div.navbar-container {
 }
 
 div.artifacts {
-  float: left;
-  padding: 5px;
   width: 20%;
+  margin-bottom: 5px;
 }
 
 div.artifact {
