--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -1,6 +1,6 @@
-<h1>New Artifact</h1>
+<h1>New Item</h1>
 
-<%= form_for @artifact, html: { multipart: true } do |f| %>
+<%= form_for @item, html: { multipart: true } do |f| %>
   <div class="left">
     <dl class="">
       <dt><%= f.label :title %></dt>
