--- a/app/views/items/edit.html.erb
+++ b/app/views/items/edit.html.erb
@@ -1,8 +1,8 @@
-<%= form_for @artifact, html: { multipart: true } do |f| %>
-  <div class="artifact">
-    <%= image_tag @artifact.image_url.to_s %>
-    <h1><%= @artifact.title %></h1>
-    <h2>Artist: <%= @artifact.artist %></h2>
+<%= form_for @item, html: { multipart: true } do |f| %>
+  <div class="item">
+    <%= image_tag @item.image_url.to_s %>
+    <h1><%= @item.title %></h1>
+    <h2>Artist: <%= @item.artist %></h2>
   </div>
   
   <div class="left">
